<resources>
    <string name="app_name">0603TheFirstProject</string>
    <string name="age">AGE</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="age_in_minutes">Age in minutes</string>
    <string name="calc_text">12345</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="devide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="substract">-</string>
    <string name="delete">delete</string>
    <string name="plus">+</string>
    <string name="button_equal">=</string>
    <string name="dot">.</string>
    <string name="eqval">=</string>
</resources>