<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fild"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/light_grey"
        android:textSize="48sp"
       
        android:gravity="end|bottom" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="getNumber"
            android:text="@string/_7"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="getNumber"
            android:text="@string/_8"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="getNumber"
            android:text="@string/_9"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="getNumber"
            android:text="@string/devide"
            tools:ignore="UsingOnClickInXml" />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="getNumber"
            android:text="@string/_4"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="getNumber"
            android:text="@string/_5"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_sixs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="getNumber"
            android:text="@string/_6"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_myltiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="getNumber"
            android:text="*"
            tools:ignore="UsingOnClickInXml" />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="getNumber"
            android:text="@string/_1"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="getNumber"
            android:text="@string/_2"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="getNumber"
            android:text="@string/_3"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_substract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="getNumber"
            android:text="@string/substract"
            tools:ignore="UsingOnClickInXml" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="getNumber"
            android:text="@string/_0"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="ocClear"
            android:text="@string/delete"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="getNumber"
            android:text="@string/plus"
            tools:ignore="UsingOnClickInXml" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="getResult"
            android:text="@string/eqval"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/delete_one_element_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="delereElementEnd"
            android:text="C"/>





    </LinearLayout>

</LinearLayout>